    installs its TAP driver as TAPxxxxco (where xxxx is the 
    driver version).
    After installing it, you will notice " (coLinux)" appended to
    the device name in the Network Connections manager. The old
    driver will remain until it is uninstalled.
  * If the MAC address is unspecified, a random MAC is choosed 
    using the familiar TAP prefix (00:FF:XX:XX:XX:XX).
  * Bug fix: Reception and delivery of network packets bigger than 
    2kb.

* Version 0.6.1 
  * Multiple virtual NICs are supported (eth1, eth2, etc...).
  * Some small bugfixes.	 
  * Added the ability to send Ctrl-Alt-Del to the Linux machine.
  * Linux patch updated to 2.4.26	
  * Linux port (for systems running kernel 2.6.x)
  * Fixed a crash that could happen on swapoff().
  * Initmem is freed (no more 'missing implementation')
  * The number of maximum cobd block devices was increased to 32.
  * The daemon process is pinned to the first processor until
    we get the SMP stability issue fixed.
  * Time is not going backward for gettimeofday() users anymore.
  * Support for running more than one instance of coLinux is now functional.	 
  * No port I/O allowed from userspace: the guest Linux can't change the host's 
    clock, and it also fixed crashes that were caused by trying to run X.
  * Windows: 
    * Sizes of raw partition devices are now detected properly. This 
      means that the resierfs problems should be over, plus cat /dev/cobd* 
      would work for you.
    * Suspension of the host machine won't cause colinux-daemon problems like 
      memory leaks.
    * The daemon can install itself as a service (Jaroslaw Kowalski). 
      Stopping the service sends Ctrl-Alt-Del to let the Linux VM
      shutdown cleanly.
    * The daemon can install the linux.sys driver separately from its run,
      which can allow you to run coLinux as any user that have access to
      the installed driver (Daniel R. Slater).	 