@@ -41,17 +41,42 @@ class console_widget_NT_t:public console_widget_t {
 	CONSOLE_CURSOR_INFO cursor;
 	unsigned keyed;
 
-	co_rc_t op_scroll_up(co_console_unit &topRow, co_console_unit &bottomRow, co_console_unit &lines);
-	co_rc_t op_scroll_down(co_console_unit &topRow, co_console_unit &bottomRow, co_console_unit &lines);
-	co_rc_t op_putcs(co_console_unit &Y, co_console_unit &X, co_console_character *data, co_console_unit &length);
-	co_rc_t op_putc(co_console_unit &Y, co_console_unit &X, co_console_character &charattr);
-	co_rc_t op_cursor(co_cursor_pos_t & position);
-	co_rc_t op_clear(co_console_unit &T, co_console_unit &L,
-			 co_console_unit &B, co_console_unit &R, co_console_character charattr);
-	co_rc_t op_bmove(co_console_unit &Y, co_console_unit &X,
-			 co_console_unit &T, co_console_unit &L,
-			 co_console_unit &B, co_console_unit &R);
-	co_rc_t op_invert(co_console_unit &Y, co_console_unit &X, co_console_unit &C);
+	co_rc_t op_scroll_up(
+			const co_console_unit &topRow,
+			const co_console_unit &bottomRow,
+			const co_console_unit &lines);
+	co_rc_t op_scroll_down(
+			const co_console_unit &topRow,
+			const co_console_unit &bottomRow,
+			const co_console_unit &lines);
+	co_rc_t op_putcs(
+			const co_console_unit &Y,
+			const co_console_unit &X,
+			const co_console_character *data,
+			const co_console_unit &length);
+	co_rc_t op_putc(
+			const co_console_unit &Y,
+			const co_console_unit &X,
+			const co_console_character &charattr);
+	co_rc_t op_cursor(
+			const co_cursor_pos_t &position);
+	co_rc_t op_clear(
+			const co_console_unit &T,
+			const co_console_unit &L,
+			const co_console_unit &B,
+			const co_console_unit &R,
+			const co_console_character charattr);
+	co_rc_t op_bmove(
+			const co_console_unit &Y,
+			const co_console_unit &X,
+			const co_console_unit &T,
+			const co_console_unit &L,
+			const co_console_unit &B,
+			const co_console_unit &R);
+	co_rc_t op_invert(
+			const co_console_unit &Y,
+			const co_console_unit &X,
+			const co_console_unit &C);
 };
 
 #endif
